add ModelView
ajout d'un class ModelView